fixed spacing on mobile

--- a/src/components/ProfileImage/ProfileImage.css
+++ b/src/components/ProfileImage/ProfileImage.css
@@ -1,5 +1,5 @@
 .card-profile {
-  width: 340px;
+  max-width: 340px;
   margin: 50px auto;
   border-radius: 0;
   border: 0;
