--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -1,7 +1,6 @@
 .card-profile {
-  width: 340px;
+  max-width: 340px;
   margin: 50px auto;
-  background-color: $card-bg;
   border-radius: 0;
   border: 0;
   box-shadow: 1em 1em 2em rgba(0,0,0,.2);
@@ -16,7 +15,6 @@
   border-radius: 50%;
   margin-top: -95px;
   margin-bottom: 35px;
-  border: 5px solid $card-bg;
 }
 
 .card-title {
